started creating the application state

--- a/src/Components/Board/Board.module.css
+++ b/src/Components/Board/Board.module.css
@@ -1,5 +1,9 @@
 .wrapper{
-	width: 500px;
-	height: 300px;
+	display: flex;
+	flex-wrap: wrap;
 	background-color: rgb(201, 201, 217);
+}
+
+.wrapper_position{
+	position: relative;
 }
