--- a/src/Components/Оbstacle/Оbstacle.module.css
+++ b/src/Components/Оbstacle/Оbstacle.module.css
@@ -1,9 +1,8 @@
 .size{
 	width: 40px;
 	height: 40px;
-	background-color: black;
+	background-color: rgb(183, 199, 1);
 	position: absolute;
 	transition: all 0.5s ease-out;
 	display: block;
 }
-
