--- a/src/Components/Rabbit/Rabbit.module.css
+++ b/src/Components/Rabbit/Rabbit.module.css
@@ -3,7 +3,7 @@
 	height: 40px;
 	background-color: black;
 	position: absolute;
-	transition: all 0.5s ease-out;
+	transition: all 0.5s ease;
 	display: block;
 }
 
