--- a/src/Components/Barrier/Barrier.module.css
+++ b/src/Components/Barrier/Barrier.module.css
@@ -1,7 +1,9 @@
 .size{
 	width: 40px;
 	height: 40px;
-	background-color: rgb(155, 88, 88);
+	background-image: url('../../image/barrier.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 	position: absolute;
 	transition: all 0.5s ease-out;
 	display: block;
