--- a/src/Components/Rabbit/Rabbit.module.css
+++ b/src/Components/Rabbit/Rabbit.module.css
@@ -1,9 +1,12 @@
 .size{
 	width: 40px;
 	height: 40px;
-	background-color: black;
+	background-image: url('../../image/rabbit.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 	position: absolute;
 	/* transition: all 0.1s ease; */
 	display: block;
+
 }
 
