--- a/src/Components/Wolf/Wolf.module.css
+++ b/src/Components/Wolf/Wolf.module.css
@@ -1,7 +1,9 @@
 .size{
 	width: 40px;
 	height: 40px;
-	background-color: rgb(8, 211, 137);
+	background-image: url('../../image/wolf.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 	position: absolute;
 	transition: all 0.5s ease-out;
 	display: block;
